Manual Furo dark mode fix

--- a/src/exts/static/questions.css
+++ b/src/exts/static/questions.css
@@ -80,5 +80,17 @@
   .question .admonition-title:before {
     color:#667081;
   }
+}
 
+body[data-theme="dark"] .question .admonition-title {
+  background-color: rgb(32, 32, 56);
+}
+
+body[data-theme="dark"] .question .admonition {
+  background-color: rgb(var(--inf-offblack));
+  border-color: hsl(211, 48%, 50%);
+}
+
+body[data-theme="dark"] .question .admonition-title:before {
+  color:#667081;
 }
